; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_sync.c_do_sync_work.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_sync.c_do_sync_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@sync_inodes_one_sb = common dso_local global i32 0, align 4
@sync_fs_one_sb = common dso_local global i32 0, align 4
@fdatawrite_one_bdev = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Emergency Sync complete\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @do_sync_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_sync_work(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca i32, align 4
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @sync_inodes_one_sb, align 4
  %5 = call i32 @iterate_supers(i32 %4, i32* %3)
  %6 = load i32, i32* @sync_fs_one_sb, align 4
  %7 = call i32 @iterate_supers(i32 %6, i32* %3)
  %8 = load i32, i32* @fdatawrite_one_bdev, align 4
  %9 = call i32 @iterate_bdevs(i32 %8, i32* null)
  %10 = load i32, i32* @sync_inodes_one_sb, align 4
  %11 = call i32 @iterate_supers(i32 %10, i32* %3)
  %12 = load i32, i32* @sync_fs_one_sb, align 4
  %13 = call i32 @iterate_supers(i32 %12, i32* %3)
  %14 = load i32, i32* @fdatawrite_one_bdev, align 4
  %15 = call i32 @iterate_bdevs(i32 %14, i32* null)
  %16 = call i32 @printk(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %17 = load %struct.work_struct*, %struct.work_struct** %2, align 8
  %18 = call i32 @kfree(%struct.work_struct* %17)
  ret void
}

declare dso_local i32 @iterate_supers(i32, i32*) #1

declare dso_local i32 @iterate_bdevs(i32, i32*) #1

declare dso_local i32 @printk(i8*) #1

declare dso_local i32 @kfree(%struct.work_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
